# mlconjug3

./: .bandit.yml  .bumpversion.cfg  .gitignore  .projectignore  .pyup.yml  .readthedocs.yaml  .snyk  .travis.yml  AUTHORS.rst  BUILD  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  INSTALL.rst  LICENSE  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  Pipfile  README.rst  SECURITY.md  TODO.rst  anaconda-project.yml  appveyor.yml  codecov.yml  notes.txt  pants.toml  pyproject.toml  pypy_requirements_dev.txt  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  snyk-infrastructure-analysis.yml  tox.ini  travis_pypi_setup.py
.circleci/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: CIBuildWheels.yaml  OSSF_scorecard.yml  PyPY_Builds.yml  build_and_test.yml  codeql-analysis.yml  manual_build_workflow_trigger.yml  manual_codeql_workflow_trigger.yml  manual_poetry_build_and_test.yml  poetry_build_and_test.yml  sign_and_publish.yml  snyk-infrastructure-analysis.yml  test_pypi.yml  upload_wheels_to_pypi.yml  wheels.yml
.monkeyType/: monkeytype.sqlite3
.monkeyType/stubs/: PyVerbiste.pyi  __init__.pyi  mlconjug.pyi
.pants.d/run-tracker/pants_run_2023_02_02_21_32_28_375_c7062d29af294bf2946889cef7da09d4/: logs
.wily/: report.html
btodo/: b.todo
docs/: .buildinfo  .gitignore  Makefile  authors.html  conf.py  contributing.html  genindex.html  history.html  index.html  index.rst  installation.html  installation.rst  make.bat  modules.html  modules.rst  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  ttyrecord  usage.html  usage.rst
docs/_build/doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  modules.doctree  readme.doctree  usage.doctree
docs/_build/html/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
docs/_modules/: index.html
docs/_modules/mlconjug3/: PyVerbiste.html  mlconjug.html
docs/_sources/: installation.rst.txt  modules.rst.txt  usage.rst.txt
docs/_static/: bizstyle.js  documentation_options.js  opensearch.xml
docs/doctrees/: environment.pickle  history.doctree  modules.doctree  readme.doctree  usage.doctree
docs/locale/es/LC_MESSAGES/: authors.po  contributing.po  history.po  index.po  installation.po  modules.po  readme.po  usage.po
docs/locale/fr/LC_MESSAGES/: authors.po  contributing.po  history.po  index.po  installation.po  modules.po  readme.po  usage.po
docs/locale/it/LC_MESSAGES/: authors.po  contributing.po  history.po  index.po  modules.po  (+3 more)
mlconjug/: PyVerbiste.py  PyVerbiste.pyi  __init__.py  __init__.pyi  cli.py  cli.pyi  mlconjug.py  mlconjug.pyi  py.typed  utils.py
mlconjug/data/conjug_manager/: conjugation-en.json  conjugation-en.xml  conjugation-es.xml  conjugation-fr.json  conjugation-fr.xml  conjugation-it.xml  conjugation-pt.xml  conjugation-ro.json  conjugation-ro.xml  verbs-en.json  verbs-en.xml  verbs-es.json  verbs-es.xml  verbs-fr.json  verbs-fr.xml  verbs-it.json  verbs-it.xml  verbs-pt.json  verbs-pt.xml  verbs-ro.json  verbs-ro.xml
mlconjug/stubs/: PyVerbiste.pyi
mlconjug3/: PyVerbiste.py  PyVerbiste.pyi  PyVersire.pyi  TUI.py  TUI2.py  __init__.py  __init__.pyi  cli.py  cli.pyi  conjug_manager.py  conjug_manager.pyi  conjug_manager2.py  conjugation_database.py  conjugation_rules.py  constants.py  constants.pyi  dataset.pyi  error_handler.py  exporter.py  feature_extractor.py  feature_extractor.pyi  feature_extractor2.py  gui.py  gui2.py  history.py  importer.py  load_config.py  mlconjug.py  mlconjug.pyi  mlconjug2.py  mlconjug_latest.py  models.py  models.pyi  plugins.py  rich_cli.py  tui.py  tui.pyi  utils.py  validator.py  verb_corrector.py  (+8 more)
mlconjug3/PyVerbiste/: PyVerbiste.py  PyVerbiste.pyi  __init__.py
mlconjug3/TUI/: TUI.css  TUI.py  TUI3.py  TUI4.py  TUI_final.py  TUI_new.css  dark.css
mlconjug3/WebUI/: index.html  mlconjug.html
mlconjug3/cli/: cli.py
mlconjug3/config/: config.toml  constants.yaml
mlconjug3/conjug_manager/: __init__.py  conjug_manager.py  conjug_manager.pyi
mlconjug3/constants/: constants.py  constants.pyi  dump.py
mlconjug3/data/conjug_manager/: conjugation-en.xml  conjugation-es.xml  conjugation-it.xml  conjugation-pt.xml  conjugation-ro.xml  verbs-en.xml  verbs-es.xml  verbs-it.xml  verbs-pt.xml  verbs-ro.xml
mlconjug3/dataset/: __init__.py  dataset.py  dataset.pyi
mlconjug3/feature_extractor/: __init__.py  feature_extractor.py  feature_extractor.pyi
mlconjug3/models/: __init__.py  models.py  models.pyi
mlconjug3/plugins/: languages.py  verbs.py
mlconjug3/refactor/: mlconjug.py
mlconjug3/utils/: __init__.py  constants.yaml  dump.py  error_analysis.py  error_analysis.pyi  logger.py  logger.pyi  model_trainer.py  model_trainer.pyi
mlconjug3/verbs/: __init__.py  verbs.py  verbs.pyi
mlconjug3/web/: app.py  conjugation.html  index.html
tests/: __init__.py  config.toml  config.yaml  test_PyVerbiste.py  test_cli.py  test_conjug_manager.py  test_feature_extractor.py  test_mlconjug.py  test_verbs.py
utils/: GridSearchModels.py  MultiCore_training_default_params.py  ReducedGridSearchModels.py  config.yaml  conjug_formatter.py  evaluate_best_models.py  experiments.txt  hydra_model_trainer.py  model_trainer.py  multiproc_training_with_default_parameters.py  pin_github_actions.py  quick_training.py  quick_training_with_default_parameters.py  quick_training_with_gridsearch_parameters.py  test_best_models.py  train_model.py  train_models.py  utils.py
utils/issues/: issue#44.py  issue#80.py  issue#82.py  issue#89.py  issue315.xml
utils/raw_data/experiments/: best_model_parameters_fr.pkl  best_model_parameters_pt.pkl  best_model_parameters_ro.pkl  results.json  training_results.txt
utils/raw_data/models/: best_model_fr.pkl
(+55 files in other folders)
