[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mlconjug3"
version = "3.8.3"
description = "A Python library to conjugate French, English, Spanish, Italian, Portuguese and Romanian verbs using Machine Learning techniques."
license = "MIT license"
keywords = ["mlconjug3", "conjugate", "conjugator", "conjugation", "conjugaison", "conjugación", "coniugazione", "conjugação", "conjugare", "verbs", "verbes", "verbos", "ML", "machine-learning", "NLP", "linguistics", "linguistique", "linguistica", "conjug_manager", "sklearnscikit-learn"]
classifiers = ["Development Status :: 5 - Production/Stable", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Education", "Topic :: Scientific/Engineering :: Artificial Intelligence", "Topic :: Utilities", "Intended Audience :: Developers", "Intended Audience :: End Users/Desktop", "Intended Audience :: Education", "Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Natural Language :: French", "Natural Language :: Spanish", "Natural Language :: Italian", "Natural Language :: Portuguese", "Natural Language :: Romanian", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.7","Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10"]
homepage = "https://github.com/SekouDiaoNlp/mlconjug3"
authors = ["SekouDiaoNlp <diao.sekou.nlp@gmail.com>"]
repository = "https://github.com/SekouDiaoNlp/mlconjug3"
documentation = "https://mlconjug3.readthedocs.io/en/latest/"
maintainers = ["SekouDiaoNlp <diao.sekou.nlp@gmail.com>"]
readme = "README.rst"
packages = [
    { include = 'mlconjug3' },
    { include = 'tests' },
]
include = [
    { path = '*.rst', format = 'sdist' },
    { path = 'docs/*.*', format = 'sdist' },
]
exclude = [
    { path = '*.rst', format = 'wheel' },
]

[tool.poetry.scripts]
mlconjug3 = 'mlconjug3.cli:main'

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
click = "~8.0.3"
colorama = "~0.4.4"
cython = "~0.29.24"
defusedxml = "~0.7.1"
joblib = "~1.1.0"
scikit-learn = "==1.0.2,>=1.0.2"
numpy = "~1.22.2"
progressbar2 = "~3.53.1"

[tool.poetry.dev-dependencies]
asq = "~1.3.0"
bandit = "~1.7.0"
bump2version = "~1.0.1"
coverage = "~6.0.2"
cryptography = "~35.0.0"
docutils = "<0.18"
mypy = "~0.910"
pathlib2 = "~2.3.6"
pytest = "~6.2.5"
pytest-runner = "~5.3.1"
pyyaml = "~6.0"
sphinx = "~4.2.0"
tox = "~3.24.4"
twine = "~3.4.2"
watchdog = "~2.1.6"
pytest-cov = "~3.0.0"
codecov = "~2.1.12"

[tool.bandit]
skips = ["B311"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
warn_unused_configs = true
strict = true
ignore_missing_imports = true
show_error_codes = true
files = "mlconjug3/"
