[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mlconjug3"
version = "3.11.0"
description = "A Command Line application and Python library to conjugate French, English, Spanish, Italian, Portuguese and Romanian verbs using Machine Learning techniques."
license = "MIT"

keywords = [
    "mlconjug3", "conjugate", "conjugator", "conjugation",
    "verbs", "machine-learning", "NLP", "linguistics", "scikit-learn"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

homepage = "https://github.com/Ars-Linguistica/mlconjug3"
repository = "https://github.com/Ars-Linguistica/mlconjug3"
documentation = "https://mlconjug3.readthedocs.io/"

authors = ["Sekou Diao <diao.sekou.nlp@gmail.com>"]
maintainers = ["Ars-Linguistica <diao.sekou.nlp@gmail.com>"]

readme = "README.rst"

packages = [{ include = "mlconjug3" }]

include = [
    { path = "*.rst", format = "sdist" },
    { path = "docs/*.*", format = "sdist" }
]

exclude = [
    { path = "*.rst", format = "wheel" }
]

[tool.poetry.scripts]
mlconjug3 = "mlconjug3.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

click = ">=8.1,<9"
defusedxml = ">=0.7,<1"
joblib = ">=1.2,<2"
rich = ">=13,<14"
pyyaml = ">=6,<7"
tomlkit = ">=0.11,<1"

# -------------------------
# NUMPY (safe across all)
# -------------------------
numpy = ">=1.26.4,<2.2"

# -------------------------
# SCIKIT-LEARN (FIXED)
# -------------------------

scikit-learn = [
    { version = ">=1.3,<1.8", python = "<3.13" },
    { version = ">=1.8,<2", python = ">=3.13" }
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7,<9"
pytest-cov = ">=4,<6"
coverage = ">=7,<8"
mypy = ">=1,<2"
black = ">=23,<25"
tox = ">=4,<5"
sphinx = ">=7,<9"
twine = ">=4,<6"
bandit = ">=1.7,<2"
furo = ">=2024.1,<2026"

[tool.bandit]
skips = ["B311"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
warn_unused_configs = true
strict = true
ignore_missing_imports = true
show_error_codes = true
files = "mlconjug3/"
